tests/samples/failing/05_assign_immutable.mlang
let value 1;
set value 2;